# chatserver

./: CMakeLists.txt  README.md
include/: public.hpp
include/client/: stresstest.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: connectionpool.h  db.h
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  user.hpp  usermodel.hpp
include/server/redis/: redis.hpp
include/server/timer/: timer_heap.hpp
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp  stresstest.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: connectionpool.cpp  db.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  usermodel.cpp
src/server/redis/: redis.cpp
src/server/timer/: timer_heap.cpp
src/testserver/: CMakeLists.txt  main.cpp
